# basic_lexer

./: .gitignore  Cargo.toml  LICENSE  README.md  test.c
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/basic_lexer/: all.html  enum.Token.html  index.html  sidebar-items.js  struct.File_tokenizer.html  struct.Str_tokenizer.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/iter/traits/iterator/: trait.Iterator.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.back  lib.rs  lib.rs~  main.rs  main.rs~  maintest.rs  outtakes  outtakes~  zero_copy.back  zero_copy.rs
