[package]
name = "basic_lexer"
version = "0.2.0"
edition = "2018"
license = "MIT"
description = "Basic lexical analyzer for parsing and compiling"
repository = "https://github.com/chuckcscccl/basic_lexer/"
keywords = ["scanner", "tokenizer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
